RDKB-6828 :BCI migration to Ciscoxb3 Yocto
Reason for change: Utopia changes releated to BCI
Test Procedure: None
Risks: None.
Signed-off-by: Vinayak_Bhat@cable.comcast.com

Change-Id: Ia7c8284d84b6e31d77b47740f7520aa8612dc2cc
(cherry picked from commit 98c2474f9174f573c80a6514953c24b2b16a3258)

Conflicts:
	source/scripts/init/c_registration/Makefile.am

CXB33941B-11, CXB33941B-16 :[BCI ]Default Login credentials are not working

Reason for change: On business gateway user cant login using cusadmin/highspeed.
Test Procedure: None.
Risks: None.
Signed-off-by: Ayush_Singhal@comcast.com

Change-Id: I5345e43b4da8f1a636be6c8a8cbe7166f9ace0c5

RDKB-6828 :BCI migration to Ciscoxb3 Yocto

Reason for change:  re-created service_routed.c_migration.patch
Test Procedure: None
Risks: None.
Signed-off-by: Vinayak_Bhat@cable.comcast.com

Change-Id: If0bbf343a66f5386416aabd2862f84f2ac9d1cca

RDKB-6828 :BCI migration to Ciscoxb3 Yocto

Reason for change: service_routed.c fix
Test Procedure: None
Risks: None.
Signed-off-by: Vinayak_Bhat@cable.comcast.com

Change-Id: I108b54981014051dc37b8c05840dfa95df471ae0

RDKB-3130 :BCI No Local Wi-Fi Personalization captive portal

Reason for change: BCI, there is no requirement for Wi-Fi personalization
Test Procedure: None
Risks: None.
Signed-off-by: Vinayak_Bhat@cable.comcast.com

Change-Id: I5daac47c93b3100bf9d46858ff940529fffcbda6

RDKB-7431,RDKB-7430 :True Static IP is not enabled after reboot

Reason for change: Configure STATIC IP and reboot
Test Procedure: None
Risks: None.
Signed-off-by: Vinayak_Bhat@cable.comcast.com

Change-Id: I9ede650970524c3a621178cd34d7d04ebc7a57af

RDKB-3130 :[BCI] No Local Wi-Fi Personalization captive portal

Reason for change: redirection has to be false
Test Procedure: None
Risks: None.
Signed-off-by: Vinayak_Bhat@cable.comcast.com

Change-Id: I3d70ac91ad5c091a79c96d7c367a936ec8246bc6

RDKB-6828 :BCI migration to Ciscoxb3 Yocto

Reason for change: service_ipv6 was missing in Utopia
Test Procedure: None
Risks:

--- a/configure.ac
+++ b/configure.ac
@@ -81,6 +81,7 @@ AC_CONFIG_FILES(
 	source/service_wan/Makefile
 	source/service_multinet/Makefile
 	source/service_routed/Makefile
+        source/service_ipv6/Makefile
 	source/util/Makefile
 	source/util/rpc/Makefile
     source/util/rpc/client/Makefile
