--- a/source/service_ipv6/Makefile.am
+++ b/source/service_ipv6/Makefile.am
@@ -16,4 +16,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-SUBDIRS = ulog syscfg sysevent services utctx utapi firewall firewall_log dhcpproxy newhost macclone util pal pmon services service_wan trigger igd service_routed service_ipv6 scripts service_multinet 
+bin_PROGRAMS = service_ipv6
+
+AM_CPPFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS) $(DBUS_CFLAGS)
+
+AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS)
+
+service_ipv6_SOURCES = service_ipv6.c
+
+service_ipv6_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
+                    $(top_builddir)/source/services/lib/libsrvmgr.la \
+                    $(top_builddir)/source/sysevent/lib/libsysevent.la \
+                    $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                    $(top_builddir)/source/ulog/libulog.la
