RDKB-9352 : Convert dhcp_server_start and its associated functions to C code
Reason for change: dhcp_server_start function responsible for all dhcp related
processing is converted to C as the shell script processing is taking time.
Test Procedure: During boot time check whether LAN side initialization is quicker
Risks: LAN side initialization should be proper in all cases like
facotry reset / non-factory reset / bridge mode
Signed-off-by: Raghavendra Kammara <raghavendra_kammara@cable.comcast.com>

Change-Id: I9747ec276e32d63931f69901a747ad72fcd809be

--- a/source/service_dhcp/Makefile.am
+++ b/source/service_dhcp/Makefile.am
@@ -16,4 +16,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-SUBDIRS = ulog syscfg sysevent services utctx utapi firewall firewall_log dhcpproxy newhost macclone util pal pmon services service_wan trigger igd service_routed service_ipv6 scripts service_multinet service_dhcp
+bin_PROGRAMS = service_dhcp
+
+AM_CFLAGS = -fno-exceptions -Os -Wall -Wextra
+AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS)
+service_dhcp_CPPFLAGS = -I$(top_srcdir)/include \
+						-I$(top_srcdir)/source/include \
+						-I$(top_srcdir)/source/util/utils \
+						-I$(top_srcdir)/source/service_dhcp/include \
+						$(DBUS_CFLAGS)
+
+service_dhcp_SOURCES = service_dhcp.c lan_handler.c dhcp_server_functions.c service_dhcp_server.c
+service_dhcp_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
+        		     $(top_builddir)/source/sysevent/lib/libsysevent.la \
+					 $(top_builddir)/source/syscfg/lib/libsyscfg.la
