RDKB-10300:Convert lan_handler.sh, service_ipv4.sh scripts to C code.
Reason for change: lan_handler.sh, service_ipv4.sh scripts are converted to C
as the shell script processing is taking time.
As part of this check-in lan_restart code is changed to C code.
Test Procedure: During boot time check whether LAN side initialization is quicker
All echo to proc file system should have proper values as compared to current 2.5 release
Check flip is working fine for CISCOXB3
Risks: LAN side initialization should be proper in all cases like
facotry reset / non-factory reset / bridge mode
Signed-off-by: Raghavendra Kammara <raghavendra_kammara@cable.comcast.com>

Change-Id: Icfafb2e4cf6f469a83073d5cb300da871333d399

--- a/source/service_dhcp/Makefile.am
+++ b/source/service_dhcp/Makefile.am
@@ -26,7 +26,10 @@ service_dhcp_CPPFLAGS = -I$(top_srcdir)/include \
 						-I$(top_srcdir)/source/service_dhcp/include \
 						$(DBUS_CFLAGS)
 
-service_dhcp_SOURCES = service_dhcp.c lan_handler.c dhcp_server_functions.c service_dhcp_server.c
+service_dhcp_SOURCES = service_dhcp.c lan_handler.c \
+                       dhcp_server_functions.c service_dhcp_server.c \
+                       service_ipv4.c
+
 service_dhcp_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
         		     $(top_builddir)/source/sysevent/lib/libsysevent.la \
 					 $(top_builddir)/source/syscfg/lib/libsyscfg.la
