RDKB-11307 : Conditionally compile rpcclient
Reason for change: Remove rpcclient from non puma6 platform
Test Procedure: Only XB3 platforms to have rpcclient in RFS
Risks: None

Change-Id: Iddfd7a5bad4196cbfe0b9df021037caedef6c928
Signed-off-by: rthangamani <ramakrishnan.thangamani@wipro.com>

--- a/configure.ac
+++ b/configure.ac
@@ -96,6 +96,25 @@ fi
 
 AM_CONDITIONAL(CCSP_PLATFORM_BCM, test "x$CCSP_PLATFORM" = xbcm)
 
+
+# rpcclient
+AC_ARG_WITH([rpcclient],
+[AC_HELP_STRING([--with-rpcclient={enable,disable}],
+                [enable/disable rpccleint from build])],
+[case x"$withval" in
+   xenable)
+     RPC_CLIENT=enable
+     ;;
+   xfalse)
+     RPC_CLIENT=disable
+     ;;
+   *)
+     AC_MSG_ERROR([$withval is an invalid option to --with-rpcclient])
+     ;;
+ esac],
+)
+AM_CONDITIONAL(ENABLE_RPCCLIENT, test "x$RPC_CLIENT" = xenable)
+
 # Checks for header files.
 AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
 
