RDKB-11609, RDKB-11610 : Register NTP initialization to WAN status.
Reason for change: Register NTP initialization to WAN status,
Test Procedure:  Unill wan comes up ntpd should be running as server to ATOM.
ntpd -I l2sd0.500
If Device.Time.Enable TR-181 is enabled , and once wan comes up ntpd should be started as both client and server, ARM should first sync the time with NTP server and should behave as server to ntpd on the ATOM side.
ntpd -c /tmp/ntp.conf -I wan0 -I l2sd0.500 -g

Change-Id: I32f63ec56b80af0006231611b73a71379fce2353
Risks: Low
Signed-off-by: Santosh Nayak Santosh_Nayak03@infosys.com

--- a/source/scripts/init/c_registration/Makefile.am
+++ b/source/scripts/init/c_registration/Makefile.am
@@ -54,6 +54,7 @@ AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir
 02_managed_SOURCES = 02_managed.c
 25_crond_SOURCES = 25_crond.c
 10_ntpclient_SOURCES = 10_ntpclient.c
+10_ntpd_SOURCES = 10_ntpd.c
 20_routing_SOURCES = 20_routing.c
 02_multinet_SOURCES = 02_multinet.c
 04_byoi_gap_SOURCES = 04_byoi_gap.c
