RDKB-11425 : Develop Code - build option to enable wecb.
Reason for change:
1. Remove WECB (WiFi Extender) from the configuration manifests and code.
Test Procedure:
Ensure below
1. Remove the WECB code from the builds.
2. Remove the wecb_controller path files:
remove the rdk/rdkb/components/opensource/ccsp/CcspWecbController/generic component from the /yocto_oe/manifests and /rdkmanifests files.
3. Remove WECB logging code from generic/CcspLogAgent/source/LogComponent/cosa_apis_logagentplugin.c.
4. Remove the patch files:
/meta-rdk-broadband/recipes-ccsp/ccsp/ccsp-wecb-controller.bb
/meta-rdk-oem-arris-intel-gw/meta-arrisxb3-arm/recipes-ccsp/ccsp/ccsp-wecb-controller.bbappend.
5. Verify the generic/CcspWecbController directory is not included in a checkout.

Verify all RDKB basic functionalities.
Risks: None
Signed-off-by: Lakshminarayanan Shenbagaraj Lakshminarayanan_Shenbagaraj@comcast.com

Change-Id: I88397fb3b868957a1166d715a4ab6399638701cb

--- a/source/scripts/init/c_registration/Makefile.am
+++ b/source/scripts/init/c_registration/Makefile.am
@@ -16,7 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-bin_PROGRAMS = 15_switchpmon 10_fpm 02_forwarding 10_bootstrap_dns 33_cosa 03_wan_ipv6 20_gwreset 10_mcastproxy 15_dhcpv6_client 02_wlan 15_xhs 15_dhcp_server 20_factorydefault 01_init 10_sysevent_proxy 02_lanHandler 15_qos 04_byoi 15_dnsforwarder 02_managed 25_crond 10_ntpclient 10_ntpd 20_routing 02_multinet 04_byoi_gap 15_http_server 10_mldproxy 15_ddnsclient 02_bridge 15_ssh_server 20_ciscoconnect 02_lan 10_firewall 02_syslog 15_ftp_server 15_wecb 15_igd 15_hotspot 02_ipv4 02_ipv6 15_dhcpv6_server 10_mcastsnooper 02_wan 01_system 15_misc 15_ccsphs 15_leasenotify
+bin_PROGRAMS = 15_switchpmon 10_fpm 02_forwarding 10_bootstrap_dns 33_cosa 03_wan_ipv6 20_gwreset 10_mcastproxy 15_dhcpv6_client 02_wlan 15_xhs 15_dhcp_server 20_factorydefault 01_init 10_sysevent_proxy 02_lanHandler 15_qos 04_byoi 15_dnsforwarder 02_managed 25_crond 10_ntpclient 10_ntpd 20_routing 02_multinet 04_byoi_gap 15_http_server 10_mldproxy 15_ddnsclient 02_bridge 15_ssh_server 20_ciscoconnect 02_lan 10_firewall 02_syslog 15_ftp_server 15_igd 15_hotspot 02_ipv4 02_ipv6 15_dhcpv6_server 10_mcastsnooper 02_wan 01_system 15_misc 15_ccsphs 15_leasenotify
 
 AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
@@ -68,7 +68,6 @@ AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir
 10_firewall_SOURCES = 10_firewall.c
 02_syslog_SOURCES = 02_syslog.c
 15_ftp_server_SOURCES = 15_ftp_server.c
-15_wecb_SOURCES = 15_wecb.c
 15_igd_SOURCES = 15_igd.c
 15_hotspot_SOURCES = 15_hotspot.c
 02_ipv4_SOURCES = 02_ipv4.c
