utopia: libpal.so needs to link with both libupup.so and libixml.so
Fix for build issues seen with OE 2.3.

  | ERROR: oe_runmake failed
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlDocument_getElementsByTagNameNS'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlDocument_getElementsByTagName'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlNodeList_item'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlNode_getFirstChild'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlNode_getNodeValue'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlNodeList_free'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlParseBuffer'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlNodeList_length'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlDocument_free'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlPrintNode'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlPrintDocument'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlDocument_createDocument'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlDocument_createElementNS'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlDocument_createElement'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlElement_setAttribute'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlNode_appendChild'
  | ../../../source/pal/.libs/libpal.so: error: undefined reference to 'ixmlDocument_createTextNode'
  | collect2: error: ld returned 1 exit status

Change-Id: I91365b6e3e6fa9dc37f662c9a38e86bae4f70001
Signed-off-by: Andre McCurdy <armccurdy@gmail.com>

--- a/source/pal/Makefile.am
+++ b/source/pal/Makefile.am
@@ -38,4 +38,4 @@ libpal_la_SOURCES = $(top_srcdir)/source/pal/kernel/src/pal_kernel.c \
                     $(top_srcdir)/source/pal/xml/src/pal_xml2s.c \
                     $(top_srcdir)/source/pal/xml/src/pal_xml.c
 
-libpal_la_LDFLAGS = -lupnp
+libpal_la_LDFLAGS = -lixml -lupnp
