--- a/source/utapi/lib/Makefile.am
+++ b/source/utapi/lib/Makefile.am
@@ -30,6 +30,7 @@ lib_LTLIBRARIES = libutapi.la
 libutapi_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
 libutapi_la_SOURCES = utapi_tr_wlan.c utapi.c utapi_util.c tr181_util.c utapi_parental_control.c tr181_wrpr.c utapi_wlan.c utapi_security.c utapi_dns.c utapi_tr_dhcp.c utapi_tr_user.c utapi_moca.c
 libutapi_la_LDFLAGS = 
+libutapi_la_LIBADD = $(top_builddir)/source/ulog/libulog.la
 
 libutapi_ladir = $(top_builddir)/source/include/utapi
 libutapi_la_HEADERS = utapi_wlan.h
