WEBPA-2419 : Register parodus initialization to sysevent in c_registration
Reason for change: Register parodus initialization to sysevent
Test Procedure: Check ArmConsolelog.txt.0 and PARODUSlog.txt.0 to verify parodus start up and boottime. Parodus should start early (by around 3mins). Check device uptime when "Connected to server over SSL" is logged in PARODUSlog.txt.0.
Risks: None
Signed-off-by: sadhyama_vengilat2@cable.comcast.com

Change-Id: I06fbc5cd85ee01899f7013560ab0fa24368c41b7

--- a/configure.ac
+++ b/configure.ac
@@ -96,6 +96,14 @@ fi
 
 AM_CONDITIONAL(CCSP_PLATFORM_BCM, test "x$CCSP_PLATFORM" = xbcm)
 
+AC_ARG_ENABLE([parodus],
+[  --enable-parodus    Turn on parodus],
+[case "${enableval}" in
+  yes) PARODUS_ENABLE=true ;;
+  no)  PARODUS_ENABLE=false ;;
+  *) AC_MSG_ERROR([bad value ${enableval} for --enable-parodus]) ;;
+esac],[PARODUS_ENABLE=false])
+AM_CONDITIONAL([PARODUS_ENABLE], [test x$PARODUS_ENABLE = xtrue])
 
 # rpcclient
 AC_ARG_WITH([rpcclient],
