RDKALL-433: Replace popen with secure_popen in RDKB components
Reason for change: Replace popen with secure_popen in Utopia component
Test Procedure: None
Risks:None

Change-Id: I17699640aae3db1fb07fb424c77ed152db664011
Signed-off-by: Sohit Singh <Sohit_Singh@comcast.com>

--- a/source/hnap/hdkadi/Makefile.am
+++ b/source/hnap/hdkadi/Makefile.am
@@ -26,6 +26,7 @@ AM_LDFLAGS += -lsrvmgr
 AM_LDFLAGS += -lsyscfg
 AM_LDFLAGS += -lsysevent
 AM_LDFLAGS += -lulog
+AM_LDFLAGS += -lsecure_wrapper
 
 AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
