RDKB-17280 : syscfg stuck and database corruption.
Reason for change: syscfg stuck and database corruption.

Test Procedure:
Need complete regression testing.

Change-Id: I64a7acde4ec1352f15a7ad7ca27b7cd533428dbc
Risks: Low
Signed-off-by: Santosh Nayak SantoshRamesh_Nayak@cable.comcast.com

--- a/source/syscfg/lib/Makefile.am
+++ b/source/syscfg/lib/Makefile.am
@@ -20,6 +20,7 @@ AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -fPIC
+AM_CFLAGS += -D_GNU_SOURCE
 AM_CFLAGS += -DSC_POSIX_SEM
 AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
 AM_LDFLAGS += -lpthread
