RDKALL-663: Replace remaining unsafe system command with secure system call
Reason for change: Implementation of secure system call  in component Utopia
Test Procedure:None
Risks: None

Change-Id: Ia134d87b3ec5a373b275d716f1e373dae2fb4972
Signed-off-by: Nidhi Chadha <Nidhi_Chadha@comcast.com>

--- a/source/service_routed/Makefile.am
+++ b/source/service_routed/Makefile.am
@@ -24,6 +24,8 @@ AM_LDFLAGS =  -lpthread -lz
 
 service_routed_SOURCES = service_routed.c
 
+AM_LDFLAGS += -lsecure_wrapper
+
 service_routed_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
                     $(top_builddir)/source/services/lib/libsrvmgr.la \
                     $(top_builddir)/source/sysevent/lib/libsysevent.la \
