RDKB-20482 : udhcpc script to C code conversion.
Reason for change:
When making udhcpc as common across all platform.
wan-uptime increased in Xb3 platform, hence changed.
udhcpc.script to c binary.

Test Procedure:
Test interface erouter0 ipv4 address is received or not.
Test interface erouter0 able to communicate with outerworld.

Risks: None
Signed-off-by: Arunkumar Palanichamy

ARRISXB6-8989,ARRISXB6-8950,RDKB-20626: Fix current_ipv4_link_state not up

Reason for change: In AXB6, sysevent "current_ipv4_link_state" is always down
          when udhcp is running, because of missing sym link.
          This will fix that and make the "current_ipv4_link_state" UP in AXB6
Test Procedure: build and test:
     - sysevent get "current_ipv4_link_state" should be up when WAN IPv4 is up.

Change-Id: I1c7113d1cbfe67224fe19de66e19de5011727174
Risks: None
Signed-off-by: shilpa_seshadri@cable.comcast.com

RDKB-20626 : erouter0 IP lost after flipping to udhcpc from ti_dhcpc

Reason for change:
wan_type is not available in device.properties.
Hence service_udhcpc binary stucks in deconfig state.
So ipv4 not received by udhcpc utility.
Now null validation has been added for wan_type and fixed.

Test Procedure:
1.Test erouter0 able to get ipv4 and ipv6 during flip.
2.Test erouter0 able to get ipv4 and ipv6 during boot.

Change-Id: I0aa3714c33f345c628c67a43b0fa181df7162b70
Risks: None
Signed-off-by: Arunkumar Palanichamy

RDKB-20788: To set default route in udhcpc switch mode

Reason for change: To set default route in udhcpc switch mode
Test Procedure: Verify "ping -I erouter0 www.google.com"
Verify ipv4 connected client browsing
Risks: None
Signed-off-by: shilpa_seshadri@cable.comcast.com

Change-Id: I6247b047a847ef913d5bc48be5a6bcfe5847c7bf

RDKB-20995 :wan-restart is not retaining xDNS dnsoverride settings

Reason for change: In udhcpc code instead of over writing , ipv4 and domain config is removed and updated with latest config obtained from server.
Test Procedure: Made a build

--- a/source/service_udhcpc/Makefile.am
+++ b/source/service_udhcpc/Makefile.am
@@ -16,4 +16,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-SUBDIRS = ulog syscfg sysevent services utctx utapi firewall firewall_log dhcpproxy newhost macclone util pal pmon services service_wan trigger igd service_routed service_ipv6 scripts service_multinet service_dhcp service_udhcpc
+bin_PROGRAMS = service_udhcpc
+
+AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS)
+
+AM_LDFLAGS =  -lpthread -lz
+
+service_udhcpc_SOURCES = service_udhcpc.c
+
+service_udhcpc_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
+                    $(top_builddir)/source/services/lib/libsrvmgr.la \
+                    $(top_builddir)/source/sysevent/lib/libsysevent.la \
+                    $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                    $(top_builddir)/source/ulog/libulog.la
