--- a/configure.ac
+++ b/configure.ac
@@ -72,11 +72,14 @@ AM_CONDITIONAL(CCSP_ARCH_MIPS, test "x$CCSP_ARCH" = xmips)
 
 # Specify ccsp platform (device)
 AC_ARG_WITH([ccsp-platform],
-[AC_HELP_STRING([--with-ccsp-platform={intel_usg,pc,bcm}],
+[AC_HELP_STRING([--with-ccsp-platform={intel_usg,pc,bcm,intel_puma7}],
                 [specify the ccsp platform])],
 [case x"$withval" in
    xintel_usg)
      CCSP_PLATFORM=intel_usg
+     ;;  
+   xintel_puma7)
+     CCSP_PLATFORM=intel_puma7
      ;;  
    xpc)
      CCSP_PLATFORM=pc
@@ -95,7 +98,8 @@ if test x"${CCSP_PLATFORM}" != x; then
 fi
 
 AM_CONDITIONAL(CCSP_PLATFORM_BCM, test "x$CCSP_PLATFORM" = xbcm)
-
+AM_CONDITIONAL(CCSP_PLATFORM_INTEL_PUMA7, test "x$CCSP_PLATFORM" = xintel_puma7)
+AM_CONDITIONAL([MULTILAN_FEATURE], [test "$MULTILAN_FEATURE" = "yes"])
 # Checks for header files.
 AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
 
