RDKBDEV-50 - Adding DSLite Functionality and related TR-181 DataModel Parameters
Reason For Change:
    Implemenation of DSLite Functionality and related TR-181 DataModel Parameters
        Device.DSLite.Enable
        Device.DSLite.InterfaceSettingNumberOfEntries
        Device.DSLite.InterfaceSetting.{i}.Enable
        Device.DSLite.InterfaceSetting.{i}.Status
        Device.DSLite.InterfaceSetting.{i}.Alias
        Device.DSLite.InterfaceSetting.{i}.EndpointAssignmentPrecedence
        Device.DSLite.InterfaceSetting.{i}.EndpointAddressTypePrecedence
        Device.DSLite.InterfaceSetting.{i}.EndpointAddressInUse
        Device.DSLite.InterfaceSetting.{i}.EndpointName
        Device.DSLite.InterfaceSetting.{i}.EndpointAddress
        Device.DSLite.InterfaceSetting.{i}.Origin
        Device.DSLite.InterfaceSetting.{i}.TunnelInterface
        Device.DSLite.InterfaceSetting.{i}.TunneledInterface
        Device.DSLite.InterfaceSetting.{i}.X_RDKCENTRAL-COM_MssClampingEnable
        Device.DSLite.InterfaceSetting.{i}.X_RDKCENTRAL-COM_Tcpmss
        Device.DSLite.InterfaceSetting.{i}.X_RDKCENTRAL-COM_IPv6FragEnable

    Added the dependent DSLite changes for Utopia and added compilation flag "DSLITE_FEATURE_SUPPORT" for DSLite feature compilation with distro feature 'dslite'.
    Added conditional compilation --enable-dslite_feature_support in configure.ac for service_dslite compilation.
Test Procedure:
    Detailed Test plan and Report has been attached into the JIRA ticket.

Risks: None

Signed-off-by: Abhishek Mishra<abhmishra.contractor@libertyglobal.com>

Conflicts:
	source/include/utctx/utctx_api.h
	source/scripts/init/defaults/system_defaults_arm
	source/utapi/lib/Makefile.am
	source/utctx/lib/utctx.c
	source/utctx/lib/utctx_api.h
Change-Id: I34458832e820e0c55a1aa0961f8339ef07c7ebc2

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -17,3 +17,6 @@
 # limitations under the License.
 ##########################################################################
 SUBDIRS = ulog syscfg sysevent services utctx utapi firewall firewall_log dhcpproxy newhost macclone util pal pmon services service_wan trigger igd service_routed service_ipv6 scripts service_multinet service_dhcp service_udhcpc
+if DSLITE_FEATURE_SUPPORT
+SUBDIRS += service_dslite
+endif
