--- a/source/utapi/lib/Makefile.am
+++ b/source/utapi/lib/Makefile.am
@@ -28,7 +28,7 @@ hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libutapi.la
 libutapi_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
-libutapi_la_SOURCES = utapi_tr_wlan.c utapi.c utapi_util.c tr181_util.c utapi_parental_control.c tr181_wrpr.c utapi_wlan.c utapi_security.c utapi_dns.c utapi_tr_dhcp.c utapi_tr_user.c utapi_moca.c
+libutapi_la_SOURCES = utapi_tr_wlan.c utapi.c utapi_util.c tr181_util.c utapi_parental_control.c tr181_wrpr.c utapi_wlan.c utapi_security.c utapi_dns.c utapi_tr_dhcp.c utapi_tr_user.c utapi_moca.c utapi_dslite.c
 libutapi_la_LDFLAGS = -lsecure_wrapper
 libutapi_la_LIBADD = $(top_builddir)/source/ulog/libulog.la
 
