--- a/source/service_routed/Makefile.am
+++ b/source/service_routed/Makefile.am
@@ -18,7 +18,7 @@
 ##########################################################################
 bin_PROGRAMS = service_routed
 
-AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils
+AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/utctx/lib -I$(top_srcdir)/source/utapi/lib -I$(top_srcdir)/source/util/utils
 
 AM_LDFLAGS =  -lpthread -lz
 
@@ -28,4 +28,6 @@ service_routed_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
                     $(top_builddir)/source/services/lib/libsrvmgr.la \
                     $(top_builddir)/source/sysevent/lib/libsysevent.la \
                     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                    $(top_builddir)/source/utapi/lib/libutapi.la \
+                    $(top_builddir)/source/utctx/lib/libutctx.la \
                     $(top_builddir)/source/ulog/libulog.la
