RDKB-25328:Refactor firewall code in Utopia & CPC.
Reason for change: Refactor generic code in firewall to remove Comcast proprietary information.
Test Procedure:
 Board boot-up in routed & bridged mode.
 Validate snmp, ssh & Tr069 from whitelisted IPs.
 Validate firewall related functionalities.

Risks: Low
Signed-off-by: Tarun_Saha@comcast.com
(cherry picked from commit 176f4fadb94f2e2702314cdb0c303161ab8e7521)
(cherry picked from commit aacfb005a6053dcb00ac8909e1552248752ac93b)
(cherry picked from commit 2c84f16ee0036a11cfaba3b98a8271af44527795)
Change-Id: I0cfb8f637e91f9296179322d827f6b0f15f0202c

--- a/configure.ac
+++ b/configure.ac
@@ -101,6 +101,7 @@ fi
 AM_CONDITIONAL(CCSP_PLATFORM_BCM, test "x$CCSP_PLATFORM" = xbcm)
 AM_CONDITIONAL(CCSP_PLATFORM_INTEL_PUMA7, test "x$CCSP_PLATFORM" = xintel_puma7)
 AM_CONDITIONAL([MULTILAN_FEATURE], [test "$MULTILAN_FEATURE" = "yes"])
+AM_CONDITIONAL([CPC_FIREWALL_ENABLE], [test "x$CPC_FIREWALL_ENABLE" = "xtrue"])
 # Checks for header files.
 AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
 
