--- a/source/firewall/Makefile.am
+++ b/source/firewall/Makefile.am
@@ -18,6 +18,7 @@
 ##########################################################################
 bin_PROGRAMS = firewall
 bin_PROGRAMS += nfq_handler
+AM_CFLAGS = -D_GNU_SOURCE
 AM_CPPFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include $(CPPFLAGS) $(DBUS_CFLAGS)
 AM_LDFLAGS =  -L/var/tmp/pc-rdkb/lib -lpthread -lz -lnetfilter_queue -lnfnetlink -lccsp_common -lsecure_wrapper $(DBUS_LIBS)
 firewall_SOURCES = firewall.c firewall_priv.c firewall_interface.c
