--- a/source/sysevent/control/Makefile.am
+++ b/source/sysevent/control/Makefile.am
@@ -16,14 +16,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
 AM_CFLAGS += -DIPV6=1
 
 ACLOCAL_AMFLAGS = -I m4
-
-AM_LDFLAGS = $(top_builddir)/source/sysevent/lib/libsysevent.la \
-             $(top_builddir)/source/syscfg/lib/libsyscfg.la \
-             $(top_builddir)/source/ulog/libulog.la
 
 bin_PROGRAMS = sysevent
 
@@ -31,3 +27,7 @@ sysevent_SOURCES = syseventctl.c
 
 sysevent_CPPFLAGS = -I$(top_srcdir)/source/include \
                     -I$(top_srcdir)/source/util/utils
+
+sysevent_LDFLAGS = $(top_builddir)/source/sysevent/lib/libsysevent.la \
+                   $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                   $(top_builddir)/source/ulog/libulog.la
