--- a/source/test/Makefile.am
+++ b/source/test/Makefile.am
@@ -16,16 +16,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
+AM_CFLAGS =
 
-
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-
-AM_CPPFLAGS = -Wall -g -Werror
 AM_CXXFLAGS = -std=c++11
 
 ACLOCAL_AMFLAGS = -I m4
+
 bin_PROGRAMS = Utopia_gtest.bin
+
 Utopia_gtest_bin_CPPFLAGS = -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/gtest -I${top_srcdir}/gtest/include -I${top_srcdir}/source/include -I${top_srcdir}/source
 Utopia_gtest_bin_SOURCES = gtest_main.cpp UtopiaTest.cpp
 Utopia_gtest_bin_LDFLAGS = -lgtest -lgmock -lgcov
