--- a/source/utapi/lib/Makefile.am
+++ b/source/utapi/lib/Makefile.am
@@ -16,9 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
 AM_CFLAGS += -fPIC
 
 ACLOCAL_AMFLAGS = -I m4
@@ -31,6 +29,6 @@ libutapi_la_CPPFLAGS = -I$(top_srcdir)/source/include -I$(top_srcdir)/source/uta
                        -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 \
                        -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 
-libutapi_la_LIBADD = $(top_builddir)/source/ulog/libulog.la
-
 libutapi_la_LDFLAGS = -lsecure_wrapper -ltelemetry_msgsender
+
+libutapi_la_LIBADD = $(top_builddir)/source/ulog/libulog.la
