--- a/source/macclone/Makefile.am
+++ b/source/macclone/Makefile.am
@@ -16,9 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -31,7 +29,7 @@ macclone_CPPFLAGS = -I$(top_srcdir)/source/pal/upnp/include \
                     -I$(top_srcdir)/source/pal/kernel/include \
                     -I$(top_srcdir)/source/pal/include \
                     -I$(top_srcdir)/source/pal/log/include \
-                    $(DBUS_CFLAGS) 
+                    $(DBUS_CFLAGS)
 
 macclone_LDFLAGS = $(DBUS_LIBS)
 
