--- a/source/newhost/Makefile.am
+++ b/source/newhost/Makefile.am
@@ -16,9 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -34,9 +32,9 @@ newhost_CPPFLAGS = -I$(top_srcdir)/source/pal/upnp/include \
                    -I$(top_srcdir)/source/include \
                    $(DBUS_CFLAGS)
 
+newhost_LDFLAGS = $(DBUS_LIBS)
+
 newhost_LDADD = $(top_builddir)/source/syscfg/lib/libsyscfg.la \
                 $(top_builddir)/source/sysevent/lib/libsysevent.la \
                 $(top_builddir)/source/ulog/libulog.la \
                 $(top_builddir)/source/services/lib/libsrvmgr.la
-
-newhost_LDFLAGS = $(DBUS_LIBS)
