--- a/source/syscfg/lib/Makefile.am
+++ b/source/syscfg/lib/Makefile.am
@@ -16,9 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
 AM_CFLAGS += -D_GNU_SOURCE
 AM_CFLAGS += -DSC_POSIX_SEM
 
