--- a/source/sysevent/lib/Makefile.am
+++ b/source/sysevent/lib/Makefile.am
@@ -16,9 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
-AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
 AM_CFLAGS += -DSET_REPLY_REQUIRED
 AM_CFLAGS += -DIPV6=1
 
