--- a/source/trigger/Makefile.am
+++ b/source/trigger/Makefile.am
@@ -16,7 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-AM_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_
+AM_CFLAGS =
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -34,10 +34,10 @@ trigger_CPPFLAGS = -I$(top_srcdir)/source/pal/upnp/include \
                    -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 \
                    -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 
+trigger_LDFLAGS = -lnetfilter_queue -lnfnetlink
+
 trigger_LDADD = $(top_builddir)/source/services/lib/libsrvmgr.la \
                 $(top_builddir)/source/sysevent/lib/libsysevent.la \
                 $(top_builddir)/source/ulog/libulog.la \
                 $(top_builddir)/source/syscfg/lib/libsyscfg.la \
                 -ltelemetry_msgsender
-
-trigger_LDFLAGS = -lnetfilter_queue -lnfnetlink
