--- a/source/service_udhcpc/Makefile.am
+++ b/source/service_udhcpc/Makefile.am
@@ -1,4 +1,4 @@
-##########################################################################
+
 # If not stated otherwise in this file or this component's Licenses.txt
 # file the following copyright and licenses apply:
 #
@@ -16,18 +16,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-bin_PROGRAMS = service_udhcpc
 
 AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS) -I$(top_srcdir)/source/util/print_uptime -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 
-AM_LDFLAGS =  -lpthread -lz
+bin_PROGRAMS = service_udhcpc
 
 service_udhcpc_SOURCES = service_udhcpc.c
 
+service_udhcpc_CPPFLAGS = -I$(top_srcdir)/source/include \
+                          -I$(top_srcdir)/source/util/utils \
+                          -I$(top_srcdir)/source/util/print_uptime
+
 service_udhcpc_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
-                    $(top_builddir)/source/services/lib/libsrvmgr.la \
-                    $(top_builddir)/source/sysevent/lib/libsysevent.la \
-                    $(top_builddir)/source/syscfg/lib/libsyscfg.la \
-                    $(top_builddir)/source/ulog/libulog.la \
-                    $(top_builddir)/source/util/print_uptime/libprint_uptime.la \
-		    -ltelemetry_msgsender
+                       $(top_builddir)/source/services/lib/libsrvmgr.la \
+                       $(top_builddir)/source/sysevent/lib/libsysevent.la \
+                       $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                       $(top_builddir)/source/util/print_uptime/libprint_uptime.la \
+                       $(top_builddir)/source/ulog/libulog.la \
+                       -ltelemetry_msgsender
+
