--- a/source/sysevent/lib/Makefile.am
+++ b/source/sysevent/lib/Makefile.am
@@ -21,18 +21,11 @@ AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -DSET_REPLY_REQUIRED
 AM_CFLAGS += -DIPV6=1
-AM_LDFLAGS = -L/var/tmp/pc-rdkb/lib
-AM_LDFLAGS += -lpthread
-AM_LDFLAGS += -lz
 
-AM_CPPFLAGS = -Wall -Werror
 ACLOCAL_AMFLAGS = -I m4
-hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libsysevent.la
-libsysevent_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS)
-libsysevent_la_SOURCES = libsysevent.c
-libsysevent_la_LDFLAGS = -L/var/tmp/pc-rdkb/lib -lpthread -lz
 
-libsysevent_ladir = $(top_builddir)/source/include/sysevent
-libsysevent_la_HEADERS = libsysevent_internal.h
+libsysevent_la_SOURCES = libsysevent.c
+
+libsysevent_la_CPPFLAGS = -I$(top_srcdir)/source/include
