--- a/source/scripts/init/c_registration/Makefile.am
+++ b/source/scripts/init/c_registration/Makefile.am
@@ -16,7 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-bin_PROGRAMS = 26_potd 15_switchpmon 10_fpm 02_forwarding 10_bootstrap_dns 33_cosa 03_wan_ipv6 20_gwreset 10_mcastproxy 15_dhcpv6_client 02_wlan 15_xhs 15_dhcp_server 20_factorydefault 01_init 10_sysevent_proxy 02_lanHandler 15_qos 04_byoi 15_dnsforwarder 02_managed 25_crond 10_ntpclient 10_ntpd 20_routing 02_multinet 04_byoi_gap 15_http_server 10_mldproxy 15_ddnsclient 02_bridge 15_ssh_server 20_ciscoconnect 02_lan 10_firewall 15_ftp_server 15_igd 15_hotspot 02_ipv4 02_ipv6 15_dhcpv6_server 10_mcastsnooper 02_wan 01_system 15_misc 15_ccsphs 09_xdns
+bin_PROGRAMS = 26_potd 15_switchpmon 10_fpm 02_forwarding 10_bootstrap_dns 33_cosa 03_wan_ipv6 20_gwreset 10_mcastproxy 15_dhcpv6_client 02_wlan 15_xhs 15_dhcp_server 20_factorydefault 01_init 10_sysevent_proxy 02_lanHandler 15_qos 04_byoi 15_dnsforwarder 02_managed 25_crond 10_ntpclient 10_ntpd 20_routing 02_multinet 04_byoi_gap 15_http_server 10_mldproxy 15_ddnsclient 02_bridge 15_ssh_server 20_ciscoconnect 02_lan 10_firewall 15_ftp_server 15_igd 15_hotspot 02_ipv4 02_ipv6 15_dhcpv6_server 10_mcastsnooper 02_wan 01_system 15_misc 15_ccsphs 09_xdns 10_time_sync_peer
 
 bin_PROGRAMS += 02_parodus
 
@@ -83,3 +83,4 @@ AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir
 15_leasenotify_SOURCES =15_leasenotify.c
 15_ccsphs_SOURCES = 15_ccsphs.c
 02_parodus_SOURCES = 02_parodus.c
+10_time_sync_peer_SOURCES = 10_time_sync_peer.c
